UX: add max width for c-navbar on mobile to prevent horizontal scroll

--- a/plugins/chat/assets/stylesheets/mobile/chat-navbar.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-navbar.scss
@@ -1,5 +1,6 @@
 .c-navbar {
   &-container {
+    max-width: 100vw;
     padding-inline: 0.25rem;
   }
 }
